core: ModelEntity, normal hit events, bone visibility, locators
- Add ModelEntity: extend it instead of hand-wiring an invisible carrier entity.
  It owns the GenericModel and auto-syncs viewers + position + lifecycle, and is
  the hit "owner".
- Replace custom ModelDamageEvent/ModelInteractEvent: hits on a model hitbox now
  surface as NORMAL Minestom EntityDamageEvent / PlayerEntityInteractEvent on the
  owner entity (GenericModel#getOwner). Removes both custom event classes.
- Bone visibility: GenericModel#setBoneVisible / ModelBone#setVisible show/hide a
  bone at runtime.
- Locators: GenericModel#getLocator returns a locator's world position (locators
  are now emitted as position-only bones instead of being dropped).
- Minestom 26.1.2 API fixes (getViewers wildcard, sendPacketsToViewers, LazyPacket
  removal) + per-bone metadata dirty-check to stop re-sending unchanged transforms.
- setNametag(bone, Component) creates a modern TextDisplay nametag.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01FsZs24bSHE9fCDzFbwyhuH